# hh-parsing

./: .gitignore  README.md  pyproject.toml
airflow/dags/: dag.py  data_parsing.py
hh_parsing/: data_parsing.py  main.py  tele_bot.py
